fix: responsive overflow-x

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -76,6 +76,9 @@ a {
   color: inherit;
 }
 body {
+  overflow-x: hidden;
+}
+body {
   font-family: var(--bodyFont);
   font-weight: 500;
   color: var(--bodyText);
@@ -88,7 +91,6 @@ body {
           user-select: none;
   cursor: default;
   text-rendering: inherit;
-  overflow-x: hidden;
 }
 svg {
   flex-shrink: 0;
@@ -448,6 +450,10 @@ svg {
     display: flex;
     flex-direction: column;
     padding: 10px;
+  }
+  .home-page .landing-section svg {
+    width: 100%;
+    height: 100%;
   }
 }
 .home-page .landing-section .join-text {
