--- a/src/assets/stylus/pages/home.styl
+++ b/src/assets/stylus/pages/home.styl
@@ -126,6 +126,9 @@
             display flex
             flex-direction column
             padding 10px
+            svg
+                width 100%
+                height 100%
 
         .join-text
             font-size 24px
